# beatspeak

./: .clang-tidy  .gitignore  CMakeLists.txt  CMakePresets.json  CMakeUserPresets.json  LICENSE  Readme.md  change-github-user.sh  compile_commands.json  conanfile.txt  git  shell.nix
.cache/clangd/index/: Concurrent.cpp.7CBAD5AC2DA2AB3C.idx  Concurrent.cpp.B9300AB30EFD6B27.idx  Concurrent.hpp.95CAB6CBA16CA750.idx  Concurrent.hpp.C180ADCD3CB053AD.idx  DataProcessor.cpp.0332A0324BBE7891.idx  DataProcessor.cpp.2EFE8D806777DA67.idx  DataProcessor.hpp.4608BF751793AC95.idx  DataProcessor.hpp.FD1DEBF6442D1C6B.idx  DataTransformers.cpp.49294DC6EEEAFD13.idx  DataTransformers.cpp.E965C7C51D3B5C45.idx  (+32 more)
include/: Concurrent.hpp  DataTransformers.hpp  FacialPointsGenerator.hpp  FacialRecogniser.hpp  HeadTracker.hpp  RawDataList.hpp  WebCam.hpp  main.hpp  raw_data_list.hpp  videoPlayer.h
include/App/: main.hpp
include/DataFrame/: DataFrame.hpp
include/DataGenerators/: FacialPointsGenerator.hpp  FacialRecogniser.hpp  FrameCapture.hpp  HeadTracker.hpp  TrackerData.hpp
include/DataProcessors/: Butterworth.hpp  DataBatch.hpp  DataProcessor.hpp  DataTransformers.hpp
include/IO/: WebCam.hpp
include/Utilities/: LockFreeStack.hpp
python-dev-server/: requirements.txt
scripts/: build.sh  flameGraph.sh  graph-post.sh  graph.sh  hr-graph.sh  perf.data.old  post-filter-graph.sh  post_filter.txt  run.sh  runDemo.sh  runNinja.sh
src/: Concurrent.cpp
src/DataGenerators/: FacialRecogniser.cpp  HeadTracker.cpp
src/IO/: WebCam.cpp
test_scripts/: graph.sh  hr-graph.sh  run.sh
